# pyBMC

./: .gitignore  .push.settings.jsonc  DHT22.py  MANIFEST.in  README.md  pyBMC.py  pyproject.toml  requirements.txt  setup_pi.sh  setup_pybmc.sh
extra/: pyBMC.py.old  pyBMC_classes.py  pybmc  pybmc.service  rpi_stats.sh
pyBMC/: Sensors.py  __init__.py  api.py  app.py  console.py  logger.py  pybmc.conf  pybmc.hardware.conf  rpi.py  sensors.py
pyBMC/static/: main.js  style.css  webrequest.js
pyBMC/static/css/: style.css
pyBMC/static/js/: main.js  webrequest.js
pyBMC/templates/: main.html
